# Perceptron

./: .gitignore  CMakeLists.txt  Readme.md
demo/: main.cpp
include/core/: NWeb.hpp  Neuron.hpp  Perceptron.hpp
src/core/: Neuron.cpp  Perceptron.cpp
